Protect h264, hevc hw decode support behind USE_PROPRIETARY_CODECS.

This ensures they trigger a playback failure instead of green frames.

BUG=842890
TEST=none

Cq-Include-Trybots: luci.chromium.try:android_optional_gpu_tests_rel;luci.chromium.try:linux_optional_gpu_tests_rel;luci.chromium.try:mac_optional_gpu_tests_rel;luci.chromium.try:win_optional_gpu_tests_rel
Change-Id: Ibe27767c5f4779d7b9d4ebecb74f442bf0701b15
Reviewed-on: https://chromium-review.googlesource.com/1060237
Reviewed-by: Frank Liberato <liberato@chromium.org>
Commit-Queue: Dale Curtis <dalecurtis@chromium.org>
Cr-Commit-Position: refs/heads/master@{#558826}
Former-commit-id: 0482d6d1273d9739377f47fc9be7a565ddf9a0a4